fix: corrigir fluxo de carrossel e aplicar melhorias de revisão no backend
- impedir perda das imagens de referência em updates parciais do post
- decidir formato de publicação pela contagem de mídias (evita loop
  infinito com post CAROUSEL de 1 imagem)
- liberar conexão do pool durante polling da Meta (publishAsync sem
  @Transactional; compareAndSetStatus com transação própria)
- criar e aguardar cada container do carrossel individualmente (falha
  cedo sem abandonar containers na Meta)
- numerar imagens intermediárias no WhatsApp em vez de caption nula
- bloquear vídeos em carrossel com mensagem clara (Meta só aceita
  image_url nos itens)
- unificar montagem/validação das artes em ApproveArts, usado por
  ApprovedService e MediaService
- @EntityGraph em ApproveRepository elimina N+1 nas listagens do board
- DTO validado para update-reference e @NotBlank em ArtItem.s3Key
- inferir mediatype video/image pela extensão no EvolutionApiClient