@@ -1,12 +1,12 @@
 package com.north.producoes.controller.dto.response;
 
+import com.north.producoes.entity.PostCarouselImageEntity;
 import com.north.producoes.entity.PostEntity;
 import com.north.producoes.entity.enums.PostFormatEnum;
 import com.north.producoes.entity.enums.PostStatusEnum;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record PostResponseDTO(
         Long id,
@@ -24,8 +24,8 @@ public record PostResponseDTO(
     public static PostResponseDTO from(PostEntity entity) {
         List<String> keys = entity.getCarouselImages() != null ?
                 entity.getCarouselImages().stream()
-                        .map(com.north.producoes.entity.PostCarouselImageEntity::getS3Key)
-                        .collect(Collectors.toList()) :
+                        .map(PostCarouselImageEntity::getS3Key)
+                        .toList() :
                 List.of();
 
         return new PostResponseDTO(
